// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MealRow Component renders correctly 1`] = `
<React.Fragment>
  <tr
    className="slim"
  >
    <td>
      abc
    </td>
    <td>
      4
    </td>
    <td
      className="quantity-cell"
    >
      <input
        className="meal-quantity"
        max="99"
        maxLength="4"
        min="1"
        onChange={[Function]}
        placeholder="1"
        step="1"
        type="number"
        value={4}
      />
    </td>
    <td>
      16
    </td>
    <td>
      <button
        className="btn btn-cart"
        onClick={[Function]}
      >
        ✖
      </button>
    </td>
  </tr>
</React.Fragment>
`;

exports[`MealRow Component renders correctly 2`] = `
<React.Fragment>
  <tr
    className="slim"
  >
    <td>
      abc
    </td>
    <td>
      4
    </td>
    <td
      className="quantity-cell"
    >
      <input
        className="meal-quantity"
        max="99"
        maxLength="4"
        min="1"
        onChange={[Function]}
        placeholder="1"
        step="1"
        type="number"
      />
    </td>
    <td>
      4
    </td>
    <td>
      <button
        className="btn btn-cart"
        onClick={[Function]}
      >
        ✖
      </button>
    </td>
  </tr>
</React.Fragment>
`;

exports[`MealRow Component renders correctly 3`] = `
<React.Fragment>
  <tr
    className="slim"
  >
    <td>
      abc
    </td>
    <td>
      4
    </td>
    <td
      className="quantity-cell"
    >
      <input
        className="meal-quantity"
        max="99"
        maxLength="4"
        min="1"
        onChange={[Function]}
        placeholder="1"
        step="1"
        type="number"
      />
    </td>
    <td>
      4
    </td>
    <td>
      <button
        className="btn btn-cart"
        onClick={[Function]}
      >
        ✖
      </button>
    </td>
  </tr>
</React.Fragment>
`;

exports[`MealRow Component renders correctly 4`] = `
<React.Fragment>
  <tr
    className="slim"
  >
    <td>
      abc
    </td>
    <td>
      4
    </td>
    <td
      className="quantity-cell"
    >
      <input
        className="meal-quantity"
        max="99"
        maxLength="4"
        min="1"
        onChange={[Function]}
        placeholder="1"
        step="1"
        type="number"
      />
    </td>
    <td>
      4
    </td>
    <td>
      <button
        className="btn btn-cart"
        onClick={[Function]}
      >
        ✖
      </button>
    </td>
  </tr>
</React.Fragment>
`;
